--- a/style.css
+++ b/style.css
@@ -1,9 +1,6 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 
-*{
-    box-sizing: border-box;
-}
 
 body{
    
@@ -52,14 +49,14 @@ input{
     align-items: center;
     justify-content: center;
     top: 433px;  
-    left:30px;  
+    left:68px;  
     width: auto;
     height:auto;
     border:none;
     padding-top: 16px;
     padding-bottom:16px;
-    padding-left: 10px;
-    padding-right: 160px;
+    padding-left: 0px;
+    padding-right: 120px;
     font-size: 18px;
     color: white
     
@@ -73,25 +70,25 @@ input{
 ::placeholder{
     display: flex;
     position: absolute;
-    left:37%;    
+    left:34%;    
     height:24px;
     width:auto;    
     height:fixed;
     font-family: 'Nunito-Light',sans-serif;
     font-size: 18px;    
-    letter-spacing: .25px;
+    letter-spacing: 0.25px;
     color: rgb(255, 255, 255);
     align-items: center;
     justify-content: center;
 }
-small{
+/* small{
     display: flex;
     position: relative;
     color:red;
     font-size: 18px;
     font-weight: 600;
     top:350px;
-}
+} */
 
 
 
@@ -104,7 +101,7 @@ button{
     display:inline-block;
     position:absolute;
     top:550px;
-    right:42px;
+    right:66px;
     width:auto;
     height:auto;
     border-radius: 5px;
@@ -118,7 +115,7 @@ button{
 #resend, #cancel
 {display: flex;
     position: absolute;
-    left:45px;
+    left:72px;
     background-color:rgb(247,154,33);
     font-family: 'Nunito-Light',sans-serif;
     font-size: 18px;    
@@ -140,7 +137,7 @@ a{
     flex-direction: column;
     margin: 20px;
     position: absolute;
-    left:20px;
+    left:40px;
     top:650px;
 }
 img{
