--- a/style.css
+++ b/style.css
@@ -40,7 +40,8 @@ body{
     border:none;
     align-items: center;
     text-align: center;
-    margin:10px;
+    margin:30px;
+    padding:20px;
 }
 
 input{
