--- a/style.css
+++ b/style.css
@@ -1,49 +1,40 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap');
 
 
 body{
-   
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-family: 'Nutino', Bold ;  
-    background-color: white;
-    margin:30px;
-    min-height: 100vh;
-    padding:30px;
     
+    font-family: 'Nutino', sans-serif ;  
+    background-color: white;
+    margin:10;
+    padding:0;
+    min-height: 100vh;    
 
 }
 
-#border{
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    text-align: center;
-    align-items: center;
-    border: 1px solid black;
-    margin:0;
-    padding:0;
+
+#outer-border{
     width:459px;
     height:1024px;
-    margin-bottom:10px;
-    overflow-x: hidden;
-    
+    border: 1px solid rgb(0, 0, 0);
 }
 
-#header {
+
+#header-image{
+    display: flex;
     position:relative;
-    top: 200px;
-    width:auto;
-    height:auto;
-    border:none;
+    top:261px;
+    width:427px;
+    height:129px;
+    justify-content: center;
     align-items: center;
-    text-align: center;
-    margin:30px;
     padding:20px;
 }
 
+
+
+/* 
 input{
     position: relative;
     background-color: rgb(89, 183, 73);   
@@ -83,14 +74,14 @@ input{
     align-items: center;
     justify-content: center;
 }
-/* small{
+small{
     display: flex;
     position: relative;
     color:red;
     font-size: 18px;
     font-weight: 600;
     top:350px;
-} */
+}
 
 
 
@@ -312,4 +303,4 @@ option{
     display: flex;
     position: relative;
 }
-
+ */
