--- a/style.css
+++ b/style.css
@@ -15,16 +15,20 @@ body{
 
 
 #outer-border{
+    display: flex;
+    flex-direction: column;
+    position: relative;
     width:459px;
     height:1024px;
     border: 1px solid rgb(0, 0, 0);
+    justify-content: center;
+    align-items: center;
 }
 
 
 #header-image{
     display: flex;
     position:relative;
-    top:261px;
     width:427px;
     height:129px;
     justify-content: center;
@@ -34,24 +38,23 @@ body{
 
 
 
-/* 
+
 input{
     position: relative;
     background-color: rgb(89, 183, 73);   
     border-radius: 8px;
     align-items: center;
-    justify-content: center;
-    top: 170px;    
+    justify-content: center;    
     width: auto;
     height:auto;
-    border:none;
-    padding-top: 16px;
-    padding-bottom:16px;
-    padding-left: 40px;
-    padding-right: 40px;
-    font-size: 18px;
-    color: white;
-    margin:30px;
+    border:none;    
+    font-size: 18px;    
+    margin:20px;
+    padding-top:10px;
+    padding-bottom:10px;
+    padding-left: 20px;
+    padding-right: 20px;
+    
     
 
 
@@ -59,7 +62,7 @@ input{
 
 }
 
-
+/* 
 ::placeholder{
     display: flex;
     position: relative;
