--- a/style.css
+++ b/style.css
@@ -50,15 +50,11 @@ input{
     border:none;    
     font-size: 18px;    
     margin:20px;
-    padding-top:10px;
-    padding-bottom:10px;
-    padding-left: 20px;
-    padding-right: 20px;
-    
-    
-
-
-    
+    margin-top:40px;
+    padding-top:15px;
+    padding-bottom:15px;
+    padding-left: 40px;
+    padding-right: 40px;    
 
 }
 
