--- a/style.css
+++ b/style.css
@@ -4,9 +4,12 @@
 
 
 body{
-    
+    display: flex;
+    position: relative;
     font-family: 'Nutino', sans-serif ;  
     background-color: white;
+    justify-content: center;
+
     margin:10;
     padding:0;
     min-height: 100vh;    
@@ -97,14 +100,13 @@ button{
     position:relative;
     border-radius: 5px;
     background-color:rgb(89, 183, 73);
-    border:none;
-    right:-110px;
-    padding-top:10px;
-    padding-bottom:10px;
+    border:none;    
+    padding-top:12px;
+    padding-bottom:13px;
     padding-left:28px;
     padding-right:28px;
     margin-top:30px;
-    margin-right:10px;
+    right:-110px;
     
 }
 
