--- a/style.css
+++ b/style.css
@@ -1,86 +1,44 @@
 
+
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap');
 
 *{
-    box-sizing:border-box;
+    box-sizing: border-box;
 }
-
 
 body{
-    display: grid;
-    max-width: 459px;
-    height:1024px; 
-    margin:auto; 
-    border:1px solid rgb(0, 0, 0);   
-    color:rgb(255, 255, 255);           
-}
-img{
+   
     display: flex;
-    position: relative;
-    top:269px;
+    align-items: center;
+    justify-content: center;
+    font-family: "Nunito", sans-serif;
+    margin: 10;
+    min-height: 100vh;
+
+}
+
+.mobile-container{
     
-    margin:25px;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    width:400px;
+    height:900px;
+    border:1px solid black ;
+
+}
+header{
+    position: relative;
+    top:250px;
+    margin-bottom:20px;
 }
 
 input{
-    display: flex;
     position: relative;
-    margin-left:30px;
-    margin-right:40px;
-    height:50px;
-    justify-content: center;
-    align-items: center;    
-    background-color: teal;
-    border:none;
-    border-radius: 5px;
-    padding-left:20px;
-    font-size: 18px;
-    top:-20px
+    top:230px;
+    margin-bottom:20px;
+    margin:20px;
+    padding:15px;
+    border-radius:5px;
+    background-color:
 }
-::placeholder{
-    display: flex;
-    position: relative;
-    color:white;
-    justify-content: center;
-    align-items: center;
-    border:none;
-    font-size: 18px;
-}
-
-button{
-    display:flex;
-    position: relative;
-    margin-right:40px;
-    margin-left:340px;
-    height:40px;
-    justify-content: center;
-    align-items: center;
-    background-color: teal;
-    color: white;
-    font-size:18px;
-    border-radius: 5px;
-    border:none;
-    margin-top: 25px;
-    letter-spacing: 1px;
-
-}
-.input-element{
-    display:flex;
-    flex-direction: column;
-    position:relative;
-
-}
-
-
-.download-platform{
-    display:flex;
-    flex-direction: column;
-    position:absolute;
-    top:450px;
-
-    height:20px;
-    margin-left:10px;
-
-}
-
-
