--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body{
     min-height: 100vh;
     width:429px;
     height:1024px;
-    border: 1px solid black;
+    /* border: 1px solid black; */
 
 }
 
@@ -28,7 +28,7 @@ body{
     display: flex;
     flex-direction: column;
     position: relative;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     width:350px;
     margin:15px;
     text-align: center;
