--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ input{
     text-align: center;
     align-items: center;
     background-color: rgb(89, 183, 73);    
-    font-size: 20px;
+    font-size: 16px;
     border:none;
     font-weight: 100;
     color:rgb(255, 255, 255);
@@ -64,7 +64,14 @@ input{
 
 ::placeholder{
     color:rgb(255, 255, 255);
+    font-size:16px;
+    font-weight: 100;
     
+}
+#small{
+    color: rgb(237,55 , 58);
+    font-family: "Nunito",sans-serif;
+    font-weight:800;
 }
 
 button{
@@ -112,7 +119,7 @@ button{
 
 }
 
-#resend{
+#resend, #cancel {
     display: flex;
     position: relative;
     background-color: rgb(247,154,33);
@@ -146,7 +153,7 @@ img{
     margin-bottom: 10px;
 }
 
-.encode-input{
+.entercode-input{
     display: flex;
     position: relative;
     width:80%;
@@ -168,6 +175,39 @@ p{
     margin-top:5px;
     margin-bottom:0;
 }
+
+
+.form-label {
+    display: flex;
+    flex-direction: column;
+    position:relative;
+    width:100%;
+
+   
+}
+
+label{
+    display: flex;
+    position: relative;
+    font-weight: 800;
+    width:100%;
+    margin-top: 16px;
+    
+}
+
+input.name,
+input.email,
+input.birthday,
+input.gender{
+    display: flex;
+    position: relative;    
+    margin-top:0;
+    margin-bottom:15px;
+    
+    
+}
+
+
 /* 
 #h1{
     display: flex;
