--- a/style.css
+++ b/style.css
@@ -18,9 +18,9 @@ body{
     justify-content: center;
     
     min-height: 100vh;
-    width:429px;
-    height:1024px;
-    border: 1px solid black;
+    width: auto;
+    height:auto;
+    /* border: 1px solid black; */
 
 }
 
@@ -28,7 +28,7 @@ body{
     display: flex;
     flex-direction: column;
     position: relative;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     width:350px;
     margin:15px;
     text-align: center;
