--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 
+
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap');
-/* @import url('https://fonts.googleapis.com/css2?family=Yusei+Magic&display=swap'); */
+
 *{
     box-sizing: border-box;
 }
@@ -8,21 +9,18 @@
 body{
    
     display: flex;
-    position:relative;
-   
-    font-family:'Nunito', sans-serif;
-    /* font-family: 'Yusei Magic', sans-serif; */
-  
-    background-color: white;
-    align-items: center;
-    justify-content: center;
-    
+    position:relative;   
+    font-family:'Nunito', sans-serif;  
+    background-color: white;    
     min-height: 100vh;
     width: auto;
     height:auto;
     /* border: 1px solid black; */
+    justify-content: center;
+    align-items: center;
 
 }
+
 
 .border{
     display: flex;
@@ -30,7 +28,7 @@ body{
     position: relative;
     /* border: 1px solid black; */
     width:350px;
-    margin:15px;
+    margin:10px;
     text-align: center;
     align-items: center;
 
@@ -68,11 +66,13 @@ input{
     font-weight: 100;
     
 }
-#small
+#small,
+#valid-name
 {
     color: rgb(237,55 , 58);
     font-family: "Nunito",sans-serif;
     font-weight:800;
+    margin: 5px;
 }
 
 button{
@@ -103,7 +103,7 @@ button{
     padding:5px 25px;    
     letter-spacing: 1px;
     border: none;
-    right:-126px
+    right:-126px;
     
 
 }
@@ -147,7 +147,10 @@ button{
 a{
     color:white;
     text-decoration: none;
-    letter-spacing: 1px;
+    letter-spacing: -0.23px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+
 
 }
 img{
@@ -203,7 +206,8 @@ input.gender{
     display: flex;
     position: relative;    
     margin-top:0;
-    margin-bottom:15px;
+    margin-bottom:0;
+    /* margin-bottom:15px; */
     
     
 }
@@ -286,6 +290,49 @@ input.password{
     background-color: rgb(89, 183, 73);
     letter-spacing: -0.23px;
 }
+
+#header-text{
+    display: flex;
+    position: relative;
+    font-family: "Nunito-Light",sans-serif;
+    font-size: 20px;
+    margin: 15px;
+    color:rgb(89, 183, 73);
+
+}
+
+.loading-bar{
+    display: flex;
+    position: relative;    
+    margin: 0;
+    padding: 0;
+    width:100%;
+    height:3px;
+    background-color: rgb(89, 183, 73);
+    animation: loading-bar 4s infinite;
+
+
+}
+
+@keyframes loading-bar{
+    0%{
+        width:0%;
+        
+    }
+    30%{
+        width:30%;       
+    }
+    70%{
+        width:60%;
+    }
+    100%{
+        width:100%;
+    }
+    
+}
+
+
+
 /*  ---------------header-----------
 #h1{
     display: flex;
@@ -305,3 +352,20 @@ input.password{
 #i{
     color:red;
 } */
+
+
+
+/* @media screen and (min-width: 400px){
+
+
+}  
+
+@media screen and (max-width: 800px){
+
+    
+ 
+
+}   */
+
+
+
